@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-28T16:26:30Z",
-  "count_outdated" : 2523,
-  "uniques_outdated" : 656,
-  "count" : 2577,
-  "uniques" : 687,
+  "timestamp" : "2022-10-29T01:47:22Z",
+  "count_outdated" : 2536,
+  "uniques_outdated" : 665,
+  "count" : 2590,
+  "uniques" : 695,
   "clones" : [
-    {
-      "timestamp": "2022-10-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 13 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 9 ]
-    },
     {
       "timestamp": "2022-10-15T00:00:00Z",
       "count": 3,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-10-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
