@@ -1,3 +1,11 @@
+2022-10-29T01:47:22Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3349615835 # 978
+* notice: last 14d: unq all: 16 54
+* notice: prev accum: outdated-unq outdated-all / unq all: 656 2523 / 687 2577
+* notice: next accum: outdated-unq outdated-all / unq all: 665 2536 / 695 2590
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-10-14] / [2022-10-28]
+
 2022-10-28T16:26:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3346960961 # 977
 * notice: last 14d: unq all: 16 54
